--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
         "psr-4": {"BBIT\\": "src/BBIT/"}
     },
     "replace": {
-        "bbit/doctrine-extensions": "self.version",
+        "bbit/doctrine-extensions": "self.version"
     }
 }
